Bug 272776 - Qt version of Marble does not recognize "--help" on command line
Summary: Qt version of Marble does not recognize "--help" on command line
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 1.1.0
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-08 14:50 UTC by Bernhard Beschow
Modified: 2011-09-26 19:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-05-08 14:50:36 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

When invoking Marble with the "--help" option, Marble starts normally rather than listing command line options.

Reproducible: Always

Steps to Reproduce:
type "marble --help" on the command lne

Actual Results:  
Marble starts normally

Expected Results:  
Marble should print all options it recognizes
Comment 1 Dennis Nienhüser 2011-09-26 19:47:28 UTC
Git commit 821e6d0b6e1792f5b926008a8d57c4fd0c0f854d by Dennis Nienhüser.
Committed on 26/09/2011 at 21:40.
Pushed by nienhueser into branch 'master'.

Implement -h/--help.

BUG: 272776

M  +24   -0    src/qtmain.cpp

http://commits.kde.org/marble/821e6d0b6e1792f5b926008a8d57c4fd0c0f854d