Implement -h/--help.

BUG: 272776